Bug 1512066 - Make <input type=range> min-content size the same as its max-content size (not zero). r=jwatt, a=RyanVM